--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -44,9 +44,8 @@
         <ComponentName Value="CmMainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
         <TopLine Value="883"/>
-        <CursorPos X="48" Y="901"/>
+        <CursorPos X="27" Y="902"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -61,18 +60,19 @@
       <Unit3>
         <Filename Value="..\molecule\molecules.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="72"/>
-        <CursorPos X="3" Y="88"/>
+        <EditorIndex Value="12"/>
+        <TopLine Value="19"/>
+        <CursorPos X="3" Y="42"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit3>
       <Unit4>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="375"/>
-        <CursorPos X="11" Y="394"/>
+        <TopLine Value="398"/>
+        <CursorPos X="22" Y="412"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -86,7 +86,7 @@
       <Unit6>
         <Filename Value="..\molecule\selections.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="319"/>
         <CursorPos X="9" Y="346"/>
         <UsageCount Value="206"/>
@@ -96,7 +96,7 @@
         <Filename Value="..\UI\glutwindow.pas"/>
         <TopLine Value="191"/>
         <CursorPos X="21" Y="203"/>
-        <UsageCount Value="56"/>
+        <UsageCount Value="35"/>
       </Unit7>
       <Unit8>
         <Filename Value="..\display\base3ddisplay.pas"/>
@@ -133,8 +133,8 @@
         <Filename Value="..\base\oclconfiguration.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="106"/>
-        <CursorPos X="16" Y="38"/>
+        <TopLine Value="48"/>
+        <CursorPos X="22" Y="65"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit12>
@@ -158,20 +158,22 @@
       <Unit15>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="134"/>
-        <CursorPos X="51" Y="1018"/>
+        <TopLine Value="34"/>
+        <CursorPos X="30" Y="47"/>
         <UsageCount Value="114"/>
         <Loaded Value="True"/>
       </Unit15>
       <Unit16>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
-        <TopLine Value="205"/>
-        <CursorPos X="7" Y="221"/>
-        <UsageCount Value="65"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="43"/>
+        <CursorPos X="10" Y="57"/>
+        <UsageCount Value="168"/>
+        <Loaded Value="True"/>
       </Unit16>
       <Unit17>
         <Filename Value="..\..\sharedunits\display\base3ddisplay.pas"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="63"/>
         <CursorPos X="19" Y="79"/>
         <UsageCount Value="112"/>
@@ -181,11 +183,11 @@
         <Filename Value="..\..\sharedunits\utils\geomhash.pas"/>
         <TopLine Value="113"/>
         <CursorPos X="9" Y="66"/>
-        <UsageCount Value="81"/>
+        <UsageCount Value="60"/>
       </Unit18>
       <Unit19>
         <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="134"/>
         <CursorPos Y="149"/>
         <UsageCount Value="100"/>
@@ -211,7 +213,7 @@
       <Unit22>
         <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="62"/>
         <CursorPos X="10" Y="81"/>
         <UsageCount Value="200"/>
@@ -220,7 +222,7 @@
       <Unit23>
         <Filename Value="..\molecule\molutils.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="11"/>
         <CursorPos X="19" Y="75"/>
         <UsageCount Value="200"/>
@@ -229,7 +231,7 @@
       <Unit24>
         <Filename Value="..\docking\linegrids.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="8"/>
         <TopLine Value="17"/>
         <CursorPos X="3" Y="33"/>
         <UsageCount Value="200"/>
@@ -239,7 +241,7 @@
         <Filename Value="C:\lazarus\fpc\2.6.0\source\packages\opengl\src\gl.pp"/>
         <TopLine Value="1122"/>
         <CursorPos X="3" Y="1138"/>
-        <UsageCount Value="46"/>
+        <UsageCount Value="25"/>
       </Unit25>
       <Unit26>
         <Filename Value="..\..\sharedunits\display\povray.pas"/>
@@ -251,7 +253,7 @@
       <Unit27>
         <Filename Value="..\docking\dockdomains.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="47"/>
         <CursorPos X="19" Y="69"/>
         <UsageCount Value="202"/>
@@ -261,12 +263,12 @@
         <Filename Value="C:\lazarus\lcl\forms.pp"/>
         <TopLine Value="691"/>
         <CursorPos X="45" Y="715"/>
-        <UsageCount Value="61"/>
+        <UsageCount Value="40"/>
       </Unit28>
       <Unit29>
         <Filename Value="..\docking\dockconstraints.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="15"/>
         <TopLine Value="360"/>
         <CursorPos X="23" Y="378"/>
         <UsageCount Value="204"/>
@@ -276,18 +278,18 @@
         <Filename Value="C:\lazarus\fpc\2.6.0\source\rtl\inc\objpash.inc"/>
         <TopLine Value="185"/>
         <CursorPos X="24" Y="201"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="9"/>
       </Unit30>
       <Unit31>
         <Filename Value="..\docking\bogie.pas"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="16"/>
         <UsageCount Value="103"/>
         <Loaded Value="True"/>
       </Unit31>
       <Unit32>
         <Filename Value="..\molecule\surface.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit32>
@@ -315,124 +317,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="105" Column="32" TopLine="86"/>
-      </Position1>
-      <Position2>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="467" Column="16" TopLine="453"/>
-      </Position2>
-      <Position3>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="253" Column="84" TopLine="230"/>
-      </Position3>
-      <Position4>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="106" Column="22" TopLine="95"/>
-      </Position4>
-      <Position5>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="462" Column="21" TopLine="446"/>
-      </Position5>
-      <Position6>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="316" Column="35" TopLine="293"/>
-      </Position6>
-      <Position7>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="509" Column="46" TopLine="503"/>
-      </Position7>
-      <Position8>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="507" Column="34" TopLine="475"/>
-      </Position8>
-      <Position9>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="93" Column="55" TopLine="88"/>
-      </Position9>
-      <Position10>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="328" Column="32" TopLine="312"/>
-      </Position10>
-      <Position11>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="332" Column="77" TopLine="303"/>
-      </Position11>
-      <Position12>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="4" Column="18"/>
-      </Position12>
-      <Position13>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="335" Column="33" TopLine="321"/>
-      </Position13>
-      <Position14>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="108" Column="14" TopLine="95"/>
-      </Position14>
-      <Position15>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="32" Column="82" TopLine="18"/>
-      </Position15>
-      <Position16>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="833" Column="22" TopLine="816"/>
-      </Position16>
-      <Position17>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="14" Column="10" TopLine="10"/>
-      </Position17>
-      <Position18>
-        <Filename Value="..\docking\rotations.pas"/>
-        <Caret Line="93" Column="52" TopLine="77"/>
-      </Position18>
-      <Position19>
-        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Caret Line="201"/>
-      </Position19>
-      <Position20>
-        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Caret Line="147" Column="41" TopLine="134"/>
-      </Position20>
-      <Position21>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="157" TopLine="143"/>
-      </Position21>
-      <Position22>
-        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Caret Line="148" TopLine="134"/>
-      </Position22>
-      <Position23>
-        <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <Caret Line="149" TopLine="134"/>
-      </Position23>
-      <Position24>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="898" Column="35" TopLine="878"/>
-      </Position24>
-      <Position25>
         <Filename Value="chemeramain.pas"/>
         <Caret Line="899" Column="14" TopLine="884"/>
+      </Position1>
+      <Position2>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="124" Column="17" TopLine="105"/>
+      </Position2>
+      <Position3>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="679" Column="18" TopLine="661"/>
+      </Position3>
+      <Position4>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="680" Column="16" TopLine="661"/>
+      </Position4>
+      <Position5>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="123" Column="30" TopLine="109"/>
+      </Position5>
+      <Position6>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="96" Column="14" TopLine="82"/>
+      </Position6>
+      <Position7>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="395" Column="10" TopLine="378"/>
+      </Position7>
+      <Position8>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="52" Column="42" TopLine="38"/>
+      </Position8>
+      <Position9>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="311" Column="27" TopLine="297"/>
+      </Position9>
+      <Position10>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="301" Column="51" TopLine="287"/>
+      </Position10>
+      <Position11>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="52" Column="3" TopLine="38"/>
+      </Position11>
+      <Position12>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="60" Column="29" TopLine="38"/>
+      </Position12>
+      <Position13>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="78" Column="17" TopLine="64"/>
+      </Position13>
+      <Position14>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="291" Column="52" TopLine="283"/>
+      </Position14>
+      <Position15>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="308" Column="46" TopLine="301"/>
+      </Position15>
+      <Position16>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="323" Column="18" TopLine="314"/>
+      </Position16>
+      <Position17>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="318" Column="48" TopLine="302"/>
+      </Position17>
+      <Position18>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="322" Column="23" TopLine="302"/>
+      </Position18>
+      <Position19>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="404" Column="10" TopLine="392"/>
+      </Position19>
+      <Position20>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="418" Column="29" TopLine="405"/>
+      </Position20>
+      <Position21>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="406" Column="5" TopLine="392"/>
+      </Position21>
+      <Position22>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="417" TopLine="393"/>
+      </Position22>
+      <Position23>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="418" TopLine="395"/>
+      </Position23>
+      <Position24>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="411" Column="12" TopLine="393"/>
+      </Position24>
+      <Position25>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="413" Column="12" TopLine="397"/>
       </Position25>
       <Position26>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="124" Column="17" TopLine="105"/>
+        <Caret Line="411" TopLine="397"/>
       </Position26>
       <Position27>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="679" Column="18" TopLine="661"/>
+        <Caret Line="412" Column="13" TopLine="398"/>
       </Position27>
       <Position28>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="680" Column="16" TopLine="661"/>
+        <Caret Line="413" Column="31" TopLine="398"/>
       </Position28>
       <Position29>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="123" Column="30" TopLine="109"/>
+        <Caret Line="414" Column="25" TopLine="398"/>
       </Position29>
       <Position30>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="96" Column="14" TopLine="82"/>
+        <Caret Line="421" Column="42" TopLine="404"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -472,6 +474,15 @@
     </Other>
   </CompilerOptions>
   <Debugging>
+    <BreakPoints Count="1">
+      <Item1>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="..\molecule\pdbmolecules.pas"/>
+        <Line Value="416"/>
+      </Item1>
+    </BreakPoints>
     <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
