--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="32">
+    <Units Count="34">
       <Unit0>
         <Filename Value="chemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -44,8 +44,9 @@
         <ComponentName Value="CmMainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="884"/>
-        <CursorPos X="25" Y="899"/>
+        <IsVisibleTab Value="True"/>
+        <TopLine Value="345"/>
+        <CursorPos X="34" Y="363"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -60,19 +61,17 @@
       <Unit3>
         <Filename Value="..\molecule\molecules.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
-        <TopLine Value="19"/>
-        <CursorPos X="3" Y="42"/>
+        <EditorIndex Value="14"/>
+        <CursorPos X="40" Y="27"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit3>
       <Unit4>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="22"/>
-        <CursorPos X="36" Y="138"/>
+        <TopLine Value="25"/>
+        <CursorPos X="47" Y="46"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -86,7 +85,7 @@
       <Unit6>
         <Filename Value="..\molecule\selections.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="319"/>
         <CursorPos X="9" Y="346"/>
         <UsageCount Value="206"/>
@@ -152,14 +151,14 @@
       <Unit14>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="795"/>
-        <CursorPos X="19" Y="818"/>
+        <TopLine Value="161"/>
+        <CursorPos X="3" Y="175"/>
         <UsageCount Value="114"/>
         <Loaded Value="True"/>
       </Unit14>
       <Unit15>
         <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="8"/>
         <TopLine Value="996"/>
         <CursorPos X="46" Y="988"/>
         <UsageCount Value="168"/>
@@ -167,7 +166,7 @@
       </Unit15>
       <Unit16>
         <Filename Value="..\..\sharedunits\display\base3ddisplay.pas"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="63"/>
         <CursorPos X="19" Y="79"/>
         <UsageCount Value="112"/>
@@ -175,7 +174,7 @@
       </Unit16>
       <Unit17>
         <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="134"/>
         <CursorPos Y="149"/>
         <UsageCount Value="100"/>
@@ -201,25 +200,24 @@
       <Unit20>
         <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="62"/>
-        <CursorPos X="10" Y="81"/>
+        <EditorIndex Value="15"/>
+        <TopLine Value="690"/>
+        <CursorPos X="46" Y="708"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit20>
       <Unit21>
         <Filename Value="..\molecule\molutils.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
-        <TopLine Value="16"/>
-        <CursorPos X="19" Y="75"/>
+        <EditorIndex Value="9"/>
+        <CursorPos X="45" Y="6"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="..\docking\linegrids.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="476"/>
         <CursorPos X="16" Y="500"/>
         <UsageCount Value="200"/>
@@ -235,16 +233,16 @@
       <Unit24>
         <Filename Value="..\docking\dockdomains.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="15"/>
-        <TopLine Value="47"/>
-        <CursorPos X="19" Y="69"/>
+        <EditorIndex Value="16"/>
+        <TopLine Value="34"/>
+        <CursorPos X="3" Y="27"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit24>
       <Unit25>
         <Filename Value="..\docking\dockconstraints.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="360"/>
         <CursorPos X="23" Y="378"/>
         <UsageCount Value="204"/>
@@ -252,14 +250,16 @@
       </Unit25>
       <Unit26>
         <Filename Value="..\docking\bogie.pas"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
+        <TopLine Value="18"/>
+        <CursorPos X="19" Y="28"/>
         <UsageCount Value="103"/>
         <Loaded Value="True"/>
       </Unit26>
       <Unit27>
         <Filename Value="..\molecule\surface.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="20"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit27>
@@ -292,128 +292,104 @@
         <UsageCount Value="131"/>
         <Loaded Value="True"/>
       </Unit31>
+      <Unit32>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="146"/>
+        <CursorPos X="39" Y="147"/>
+        <UsageCount Value="129"/>
+        <Loaded Value="True"/>
+      </Unit32>
+      <Unit33>
+        <Filename Value="..\docking\docktasks.pas"/>
+        <EditorIndex Value="19"/>
+        <TopLine Value="40"/>
+        <CursorPos X="29" Y="54"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+      </Unit33>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="20" HistoryIndex="19">
       <Position1>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="608" Column="21" TopLine="589"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="277" TopLine="264"/>
       </Position1>
       <Position2>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="597" Column="33" TopLine="589"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="276" TopLine="255"/>
       </Position2>
       <Position3>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="866" Column="57" TopLine="862"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="899" Column="25" TopLine="884"/>
       </Position3>
       <Position4>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="1051" Column="14" TopLine="1025"/>
+        <Filename Value="..\molecule\pdbmolecules.pas"/>
+        <Caret Line="46" Column="40" TopLine="22"/>
       </Position4>
       <Position5>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="915" Column="13" TopLine="899"/>
+        <Filename Value="..\molecule\molecules.pas"/>
+        <Caret Line="27" Column="40"/>
       </Position5>
       <Position6>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="923" Column="38" TopLine="909"/>
+        <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
+        <Caret Line="325" Column="10" TopLine="313"/>
       </Position6>
       <Position7>
-        <Filename Value="..\..\sharedunits\utils\quicksort.pas"/>
-        <Caret Line="70" Column="20" TopLine="60"/>
+        <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
+        <Caret Line="411" Column="19" TopLine="397"/>
       </Position7>
       <Position8>
-        <Filename Value="..\..\sharedunits\utils\quicksort.pas"/>
-        <Caret Line="100" Column="44" TopLine="89"/>
+        <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
+        <Caret Line="623" Column="13" TopLine="612"/>
       </Position8>
       <Position9>
         <Filename Value="..\molecule\pdbmolecules.pas"/>
-        <Caret Line="625" Column="21" TopLine="610"/>
+        <Caret Line="46" Column="47" TopLine="25"/>
       </Position9>
       <Position10>
-        <Filename Value="..\docking\linegrids.pas"/>
-        <Caret Line="33" Column="3" TopLine="17"/>
+        <Filename Value="..\molecule\pdbparser.pas"/>
+        <Caret Line="89" Column="15" TopLine="76"/>
       </Position10>
       <Position11>
-        <Filename Value="..\docking\linegrids.pas"/>
-        <Caret Line="28" Column="32" TopLine="17"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="276" TopLine="250"/>
       </Position11>
       <Position12>
-        <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
-        <Caret Line="98" Column="41" TopLine="91"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="180" Column="10" TopLine="166"/>
       </Position12>
       <Position13>
-        <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
-        <Caret Line="99" Column="70" TopLine="91"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="74" Column="15" TopLine="61"/>
       </Position13>
       <Position14>
-        <Filename Value="..\..\sharedunits\utils\stringutils.pas"/>
-        <Caret Line="987" Column="21" TopLine="976"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="354" Column="9" TopLine="329"/>
       </Position14>
       <Position15>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="105" Column="24" TopLine="91"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="347" Column="17" TopLine="334"/>
       </Position15>
       <Position16>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="111" Column="40" TopLine="91"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="349" Column="16" TopLine="334"/>
       </Position16>
       <Position17>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="113" Column="45" TopLine="91"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="394" Column="41" TopLine="380"/>
       </Position17>
       <Position18>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="95" Column="5" TopLine="90"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="521" Column="6" TopLine="502"/>
       </Position18>
       <Position19>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="101" Column="3" TopLine="90"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="371" Column="17" TopLine="349"/>
       </Position19>
       <Position20>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="105" Column="12" TopLine="90"/>
+        <Filename Value="chemeramain.pas"/>
+        <Caret Line="361" Column="19" TopLine="346"/>
       </Position20>
-      <Position21>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="106" Column="45" TopLine="90"/>
-      </Position21>
-      <Position22>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="113" Column="38" TopLine="90"/>
-      </Position22>
-      <Position23>
-        <Filename Value="..\base\oclconfiguration.pas"/>
-        <Caret Line="148" Column="21" TopLine="135"/>
-      </Position23>
-      <Position24>
-        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
-        <Caret Line="139" Column="12" TopLine="128"/>
-      </Position24>
-      <Position25>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="84" Column="20" TopLine="71"/>
-      </Position25>
-      <Position26>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="278" Column="33" TopLine="264"/>
-      </Position26>
-      <Position27>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="276" TopLine="264"/>
-      </Position27>
-      <Position28>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="277" TopLine="264"/>
-      </Position28>
-      <Position29>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="276" TopLine="255"/>
-      </Position29>
-      <Position30>
-        <Filename Value="chemeramain.pas"/>
-        <Caret Line="899" Column="25" TopLine="884"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -452,6 +428,113 @@
     </Other>
   </CompilerOptions>
   <Debugging>
+    <BreakPoints Count="15">
+      <Item1>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="107"/>
+      </Item1>
+      <Item2>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="157"/>
+      </Item2>
+      <Item3>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="165"/>
+      </Item3>
+      <Item4>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="170"/>
+      </Item4>
+      <Item5>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="175"/>
+      </Item5>
+      <Item6>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="180"/>
+      </Item6>
+      <Item7>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="185"/>
+      </Item7>
+      <Item8>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="190"/>
+      </Item8>
+      <Item9>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="195"/>
+      </Item9>
+      <Item10>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="200"/>
+      </Item10>
+      <Item11>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="205"/>
+      </Item11>
+      <Item12>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="218"/>
+      </Item12>
+      <Item13>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="238"/>
+      </Item13>
+      <Item14>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="276"/>
+      </Item14>
+      <Item15>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="chemeramain.pas"/>
+        <Line Value="357"/>
+      </Item15>
+    </BreakPoints>
     <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
