--- a/Open-Chemera-master/oclibrary/chemera/chemera.lpi
+++ b/Open-Chemera-master/oclibrary/chemera/chemera.lpi
@@ -31,7 +31,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="34">
+    <Units Count="35">
       <Unit0>
         <Filename Value="chemera.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -60,10 +60,9 @@
       <Unit3>
         <Filename Value="..\molecule\molecules.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="14"/>
-        <TopLine Value="891"/>
-        <CursorPos X="4" Y="901"/>
+        <EditorIndex Value="15"/>
+        <TopLine Value="310"/>
+        <CursorPos X="9" Y="316"/>
         <UsageCount Value="206"/>
         <Loaded Value="True"/>
       </Unit3>
@@ -86,7 +85,7 @@
       <Unit6>
         <Filename Value="..\molecule\selections.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="319"/>
         <CursorPos X="9" Y="346"/>
         <UsageCount Value="206"/>
@@ -152,8 +151,8 @@
       <Unit14>
         <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="161"/>
-        <CursorPos X="3" Y="175"/>
+        <TopLine Value="49"/>
+        <CursorPos X="13" Y="50"/>
         <UsageCount Value="114"/>
         <Loaded Value="True"/>
       </Unit14>
@@ -167,7 +166,7 @@
       </Unit15>
       <Unit16>
         <Filename Value="..\..\sharedunits\display\base3ddisplay.pas"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="63"/>
         <CursorPos X="19" Y="79"/>
         <UsageCount Value="112"/>
@@ -175,7 +174,7 @@
       </Unit16>
       <Unit17>
         <Filename Value="..\..\sharedunits\display\displayobjects.pas"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="134"/>
         <CursorPos Y="149"/>
         <UsageCount Value="100"/>
@@ -201,7 +200,7 @@
       <Unit20>
         <Filename Value="..\..\sharedunits\utils\geomutils.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="16"/>
         <TopLine Value="690"/>
         <CursorPos X="46" Y="708"/>
         <UsageCount Value="200"/>
@@ -211,14 +210,14 @@
         <Filename Value="..\molecule\molutils.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="9"/>
-        <CursorPos X="47" Y="20"/>
+        <CursorPos X="71" Y="20"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="..\docking\linegrids.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="476"/>
         <CursorPos X="16" Y="500"/>
         <UsageCount Value="200"/>
@@ -234,7 +233,7 @@
       <Unit24>
         <Filename Value="..\docking\dockdomains.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="34"/>
         <CursorPos X="3" Y="27"/>
         <UsageCount Value="202"/>
@@ -243,7 +242,7 @@
       <Unit25>
         <Filename Value="..\docking\dockconstraints.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
         <TopLine Value="360"/>
         <CursorPos X="23" Y="378"/>
         <UsageCount Value="204"/>
@@ -251,7 +250,7 @@
       </Unit25>
       <Unit26>
         <Filename Value="..\docking\bogie.pas"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="19"/>
         <TopLine Value="18"/>
         <CursorPos X="19" Y="28"/>
         <UsageCount Value="103"/>
@@ -260,7 +259,7 @@
       <Unit27>
         <Filename Value="..\molecule\surface.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="21"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit27>
@@ -303,14 +302,23 @@
       </Unit32>
       <Unit33>
         <Filename Value="..\docking\docktasks.pas"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="20"/>
         <TopLine Value="40"/>
         <CursorPos X="29" Y="54"/>
         <UsageCount Value="209"/>
         <Loaded Value="True"/>
       </Unit33>
+      <Unit34>
+        <Filename Value="..\..\sharedunits\utils\geomhash.pas"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="10"/>
+        <TopLine Value="153"/>
+        <CursorPos X="5" Y="175"/>
+        <UsageCount Value="49"/>
+        <Loaded Value="True"/>
+      </Unit34>
     </Units>
-    <JumpHistory Count="28" HistoryIndex="26">
+    <JumpHistory Count="22" HistoryIndex="20">
       <Position1>
         <Filename Value="chemeramain.pas"/>
         <Caret Line="347" Column="17" TopLine="334"/>
@@ -388,41 +396,17 @@
         <Caret Line="316" Column="9" TopLine="310"/>
       </Position19>
       <Position20>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="377" Column="37" TopLine="363"/>
+        <Filename Value="..\molecule\molutils.pas"/>
+        <Caret Line="20" Column="71"/>
       </Position20>
       <Position21>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="153" Column="15" TopLine="141"/>
+        <Filename Value="..\..\sharedunits\utils\geomhash.pas"/>
+        <Caret Line="86" Column="16" TopLine="69"/>
       </Position21>
       <Position22>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="316" Column="9" TopLine="301"/>
+        <Filename Value="..\..\sharedunits\general\basetypes.pas"/>
+        <Caret Line="50" Column="13" TopLine="49"/>
       </Position22>
-      <Position23>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="377" Column="21" TopLine="363"/>
-      </Position23>
-      <Position24>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="408" Column="7" TopLine="395"/>
-      </Position24>
-      <Position25>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="377" Column="21" TopLine="362"/>
-      </Position25>
-      <Position26>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="453" Column="15" TopLine="436"/>
-      </Position26>
-      <Position27>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="542" Column="4" TopLine="559"/>
-      </Position27>
-      <Position28>
-        <Filename Value="..\molecule\molecules.pas"/>
-        <Caret Line="118" Column="15" TopLine="137"/>
-      </Position28>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
